artifacts/cncf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cncf
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cncf.apigateway.docker.localhost`)
      services:
        - name: httpbin-svc
          port: 8000
      middlewares:
        - name: jwt
          namespace: traefik
        - name: ratelimit
          namespace: traefik
