artifacts/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cncf
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host()
      services:
        - name: httpbin-svc
          port: 8000
  middlewares:
    - name: jwt
      namespace: traefik
    - name: opa
      namespace: traefik
